# pypre

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
config/: config_example.toml
scripts/: encrypt_config.py
src/pypre/: __init__.py  main.py
src/pypre/cbftp/: __init__.py  cbftp.py  exceptions.py
src/pypre/commands/: __init__.py  fxp.py  pre.py  upload.py
src/pypre/config/: __init__.py
src/pypre/crypto/: __init__.py
src/pypre/manager/: __init__.py  manager.py
src/pypre/objects/: site.py
src/pypre/utils/: __init__.py  click.py  logging.py  types.py
