[metadata]
name = pypre
version = attr: pypre.__version__
description = a cbftp python wrapper to manage uploads and pres
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages_dir =
    =src
packages = find:
install_requires =
    click
    requests[socks]>=2.14.0
    tqdm
    tomli;python_full_version<'3.11.0a7'
    natsort
    python-dotenv
    pydantic
python_requires = >=3.9

[options.packages.find]
where = src

[options.package_data]
pypre = py.typed

[options.entry_points]
console_scripts =
    pypre = pypre.main:main
    pp = pypre.main:main
